syntax = "proto3";
package com.gw.user.grpc;

import "google/protobuf/empty.proto";

option java_multiple_files = true;

option java_outer_classname = "UserManagementGrpc";

message UserCreateGrpcRequestDTO {
  string userName = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string dateOfBirth = 5;
}

message UserCreateGrpcResponseDTO {
  bool created = 1;
}

message FetchUserDetailsByIdGrpcRequestDTO {
  string id = 1;
}

message UserDetailsGrpcResponseDTO {
  string userName = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
  string id = 6;
  string dateOfBirth = 7;
}

message ExternalUserCreateGrpcRequestDTO {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string tokenValue = 4;
  string tokenType = 5;
  int64 tokenExpiryTime = 6;
  string externalSystem = 7;
  string dateOfBirth = 8;
}

message ExternalUserCreateGrpcResponseDTO {
  //Empty
}

service UserService {
  rpc fetchUsersById(FetchUserDetailsByIdGrpcRequestDTO) returns (UserDetailsGrpcResponseDTO);
  rpc createUser(UserCreateGrpcRequestDTO) returns (UserCreateGrpcResponseDTO);
  rpc createExternalUser(ExternalUserCreateGrpcRequestDTO) returns (ExternalUserCreateGrpcResponseDTO);
}
