syntax = "proto3";
option go_package = "../user";

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
  GENDER_OTHER = 3;
}

message FetchUserDetailsByIdGrpcRequestDTO {
  string id = 1;
}

message FetchUserDetailsByNameGrpcRequestDTO {
  string name = 1;
}

message UserDetailsGrpcResponseDTO {
  string userName = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
  string id = 6;
  string dateOfBirth = 7;
  Gender gender = 8;
  string homeCountry = 9;
}

message UserGrpcRequestDTO {
    string id = 1;
    string firstname = 2;
    string lastname = 3;
    string username = 4;
	  string password = 5;
	  string dateOfBirth = 6;
	  Gender gender = 7;
	  string homeCountry = 8;
	  repeated string authorities = 9;
}

message UserID {
    string value = 1;
}

message LoginGrpcResponseDTO {
    string userid = 1;
    string token = 2;
}

message LoginGrpcRequestDTO {
    string username = 1;
    string password = 2;
}

service FetchUserById {
  rpc fetchUsersById(FetchUserDetailsByIdGrpcRequestDTO) returns (UserDetailsGrpcResponseDTO);

  rpc fetchUsersByName(FetchUserDetailsByNameGrpcRequestDTO) returns (UserDetailsGrpcResponseDTO);

  rpc addUser(UserGrpcRequestDTO) returns (UserID);
  
  rpc loginWithPassword(LoginGrpcRequestDTO) returns (LoginGrpcResponseDTO);
}
